--- a/profile/profile2.html
+++ b/profile/profile2.html
@@ -11,7 +11,7 @@
 </head>
 <body>
     <header>
-        <h1>Software Engineer</h1>
+        <h1>Cyber Security Analyst</h1>
             <div class="group-header">
                 <div class="heading">
                     <!-- <img src="images/icons8-code-50-2.png" alt="code icon" class="code-logo"> -->
