Added Job Title

--- a/profile/profile2.html
+++ b/profile/profile2.html
@@ -31,7 +31,7 @@
     <div class="portfolio-img">
         <div class="img"></div>
         <h2 class="name">Marcus Gillespie</h2>
-        <h2>Full Stack Developer</h2>
+        <h2>Cyber Security Analyst</h2>
     </div>
     
     <section class="greetings">
