Modified css styling

--- a/profile/profile2.html
+++ b/profile/profile2.html
@@ -87,7 +87,7 @@
                     <button class="fav-btn" id="place">My Favorite Place</button>
                     <button class="fav-btn" id="ritual">My Favorite Ritual</button>
                 </div>
-                <div class="favorite-things favs"></div>
+                <!-- <div class="favorite-things favs"></div> -->
             </div>
         </div>
         <div class="form-container">
