Completed Extra Credit

--- a/profile/profile2.html
+++ b/profile/profile2.html
@@ -7,7 +7,7 @@
     <link href="profile2.css" rel="stylesheet" type="text/css">
 
     <script src="profile2.js" defer></script>
-    <title>Assessment-3</title>
+    <title>Profilepage</title>
 </head>
 <body>
     <header>
@@ -35,7 +35,7 @@
     </div>
     
     <section class="greetings">
-     <!-- Intoductory & mission statement section to the developer  -->
+     <!-- Interests & mission statement section to the developer  -->
         <div class="portfolio">
             <h2>Interests</h2>
             <div class="opeq">
@@ -48,7 +48,7 @@
                 </p>
             </div>    
         </div>   
-        <!-- Project Section highlights applications worked on -->
+        <!-- Skills Section highlights technologies worked with -->
         <div class="portfolio ">
             <h2>Skills</h2>
                 <div class="opeq symbols">
@@ -71,10 +71,12 @@
                 and user-friendly web applications. With a solid foundation in front-end technologies and a 
                 proven track record of successful projects, I bring creativity and innovation to every task.
             </p>
-            <site>Collaborate with other developers.
+            <site>
+                Collaborate with other developers.
                 Implement user experience improvements.
                 Develop websites and apps that benefit all.
-                Optimize code for maintainability, scalability, and security.</site>
+                Optimize code for maintainability, scalability, and security.
+            </site>
         </div> 
         </div>
     </section>
